# FPGA-Companion

./: .gitignore  .gitmodules  README.md  SPI.md
src/: at_wifi.c  at_wifi.h  bluetooth.h  config.c  config.h  core_atarist.c  debug.h  gowin.c  gowin.h  hid.c  hid.h  hidparser.c  hidparser.h  inifile.c  jtag.c  jtag.h  main.c  mcu_hw.h  menu.c  menu.h  ps2helper.c  ps2helper.h  puff.c  puff.h  sdc.c  sdc.h  spi.h  sysctrl.c  sysctrl.h  usb_controller_maps.h  xml.c
src/bl616/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  bl616_bootloader_0x20000_nano20k_signed_flash_prog_cfg.ini  buildall.bat  buildall.sh  fatfs_conf_user.h  lwipopts_user.h  mcu_hw.c  sdc_direct.c  sdc_direct.h  usb_config.h
src/bl616/bl616_fpga_partner/: README.md  bl616_fpga_partner_20kNano_cfg.ini
src/bl616/friend_20k/: README.md
src/esp32/: README.md  mcu_hw.c
src/esp32/main/: CMakeLists.txt
src/rp2040/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  README.md  bluetooth.c  btstack_config.h  ffconf.h  freertos_callbacks.c  mcu_hw.c  sdc_direct.c  sdc_direct.h  sdc_local.c  sdc_local.h  sdio.c  sdio.h  tusb_config.h  usb_descriptors.c  usb_jtag.c
