cmake_minimum_required(VERSION 3.15)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# write only console UART output
#set(CONFIG_CONSOLE_WO 1)

# Components
set(CONFIG_FREERTOS 1)
set(CONFIG_CHERRYUSB_OSAL "freertos")
set(CONFIG_CHERRYUSB 1)
set(CONFIG_CHERRYUSB_HOST 1)
set(CONFIG_CHERRYUSB_HOST_HID 1)
set(CONFIG_CHERRYUSB_HOST_MSC 1)
set(CONFIG_CHERRYUSB_DEVICE 1)
set(CONFIG_CHERRYUSB_DEVICE_HID 1)
set(CONFIG_CHERRYUSB_HOST_XBOX 1)
#set(CONFIG_CHERRYUSB_DEVICE_CDC_ACM 1)
set(CONFIG_BSP_SDH_SD 1)
set(CONFIG_BSP_SDH_SDCARD 1)
set(CONFIG_BSP_SDH_OSAL_POLLING_MODE 0)
#set(CONFIG_BSP_SDH_LOG_LEVEL 5)
set(CONFIG_FATFS 1)
set(CONFIG_FATFS_USBH 1)
set(CONFIG_FATFS_SDH_SDCARD 1)
set(CONFIG_BFLOG 0)
set(CONFIG_SHELL 1)
#set(CONFIG_CHERRYMP 1)
#set(CONFIG_CHERRYRB 1)
set(CONFIG_VSNPRINTF_FLOAT      1)
set(CONFIG_VSNPRINTF_FLOAT_EX   1)
set(CONFIG_VSNPRINTF_LONG_LONG  1)
set(CONFIG_CLI_CMD_ENABLE 1)

# wifi support
set(CONFIG_LWIP 1)
set(CONFIG_WIFI6 1)
set(CONFIG_RF 1)
set(CONFIG_MBEDTLS 1)
set(CONFIG_MBEDTLS_V3 1)
set(CONFIG_DHCPD 1)
set(CONFIG_POSIX 1)
set(CONFIG_TLSF 1)
set(CONFIG_PING 1)
set(CONFIG_FHOST 1)
set(CONFIG_MACSW_SELECT "default")
set(CONFIG_WIFI_IPERF 1)

# mbedtls
#ifeq(CONFIG_MBEDTLS_V3 STREQUAL "1")
###more mbedtls config macro reference config-tls-generic.h###
#CONFIG_MBEDTLS_CFG_FILE="config-tls-generic.h"
set(CONFIG_MBEDTLS_TLS_VERSION_1_2 1)
set(CONFIG_MBEDTLS_SSL_ALPN 1)
set(CONFIG_MBEDTLS_PSK_MAX_LEN 32)
set(CONFIG_MBEDTLS_PK_WRITE_C 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_PSK_ENABLED 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_RSA_ENABLED 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_DHE_RSA_ENABLED 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_ECDSA_ENABLED 1)
set(CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_RSA_ENABLED 1)
set(CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT 1)
set(CONFIG_MBEDTLS_ECDH_C 1)
set(CONFIG_MBEDTLS_ECDSA_C 1)
set(CONFIG_MBEDTLS_ECP_C 1)
set(CONFIG_MBEDTLS_ECP_DP_SECP256R1_ENABLED 1)
set(CONFIG_MBEDTLS_ECP_NIST_OPTIM 1)
set(CONFIG_MBEDTLS_PKCS5_C 1)
set(CONFIG_MBEDTLS_SOME_AEAD_CIPHER_ENABLED 1)
set(CONFIG_MBEDTLS_SOME_CIPHER_ENABLED 1)
set(CONFIG_MBEDTLS_CIPHER_AES_ENABLED 1)
set(CONFIG_MBEDTLS_AES_ROM_TABLES 1)
set(CONFIG_MBEDTLS_AES_FEWER_TABLES 1)
set(CONFIG_MBEDTLS_CIPHER_DES_ENABLED 1)
set(CONFIG_MBEDTLS_CIPHER_GCM_ENABLED 1)
set(CONFIG_MBEDTLS_CIPHER_MODE_CBC_ENABLED 1)
set(CONFIG_MBEDTLS_CIPHER_MODE_CTR_ENABLED 1)
set(CONFIG_MBEDTLS_MD5 1)
set(CONFIG_MBEDTLS_SHA1 1)
set(CONFIG_MBEDTLS_SHA224 1)
set(CONFIG_MBEDTLS_SHA256 1)
set(CONFIG_MBEDTLS_SHA256_SMALLER 1)
set(CONFIG_MBEDTLS_SHA384 1)
set(CONFIG_MBEDTLS_SHA512 1)
set(CONFIG_MBEDTLS_CTR_DRBG_ENABLED 1)
set(CONFIG_MBEDTLS_CIPHER 1)
set(CONFIG_MBEDTLS_MD 1)
set(CONFIG_MBEDTLS_GENPRIME_ENABLED 1)
set(CONFIG_MBEDTLS_HAVE_ASM 1)
set(CONFIG_MBEDTLS_ENTROPY_C 1)
set(CONFIG_MBEDTLS_ENTROPY_POLL 1)
set(CONFIG_MBEDTLS_SERVER_NAME_INDICATION 1)
set(CONFIG_MBEDTLS_DHM_C 1)
set(CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN 16384)
#CONFIG_MBEDTLS_DEBUG 1)
#CONFIG_MBEDTLS_DEBUG_LEVEL=0
#CONFIG_MBEDTLS_DEBUG_EXTRACT_BASENAME_AT_RUNTIME 1)
#CONFIG_MBEDTLS_DEBUG_STRIP_NEWLINE 1)
#else()

# mbedtls
#set(CONFIG_MBEDTLS_AES_USE_HW 1)
#set(CONFIG_MBEDTLS_BIGNUM_USE_HW 1)
#set(CONFIG_MBEDTLS_ECC_USE_HW 1)
#set(CONFIG_MBEDTLS_SHA1_USE_HW 1)
#set(CONFIG_MBEDTLS_SHA256_USE_HW 1)
#set(CONFIG_MBEDTLS_SHA512_USE_HW 1)
#endif()

# wifi
set(CONFIG_VIF_MAX 2)
set(CONFIG_STA_MAX 4)
set(CONFIG_MAC_TXQ_DEPTH 32)
set(CONFIG_MAC_RXQ_DEPTH 12)

if(TANG_BOARD STREQUAL "mega60k")
    add_definitions(-DTANG_MEGA60K)
elseif(TANG_BOARD STREQUAL "mega138kpro")
    add_definitions(-DTANG_MEGA138KPRO)
elseif(TANG_BOARD STREQUAL "console60k") 
    add_definitions(-DTANG_CONSOLE60K)
elseif(TANG_BOARD STREQUAL "console138k")
    add_definitions(-DTANG_CONSOLE138K)
elseif(TANG_BOARD STREQUAL "primer25k")
    add_definitions(-DTANG_PRIMER25K)
elseif(TANG_BOARD STREQUAL "nano20k")
    add_definitions(-DTANG_NANO20K)
elseif(TANG_BOARD STREQUAL "m0sdock")
    add_definitions(-DM0S_DOCK)
endif()

find_package(bouffalo_sdk REQUIRED HINTS $ENV{BL_SDK_BASE})

sdk_add_include_directories(. ../u8g2/csrc)

target_sources(app PRIVATE
   	mcu_hw.c
   	../hidparser.c
   	../hid.c
   	../inifile.c
   	../menu.c
   	../sdc.c
   	../osd_u8g2.c
   	../sysctrl.c
   	../config.c
   	../xml.c
    ../at_wifi.c
    ../puff.c
    ../jtag.c
    ../gowin.c
    sdc_direct.c
)

file(GLOB COMPONENT_SRCS ../u8g2/csrc/*.c  ../u8g2/sys/bitmap/common/*.c)
target_sources(app PRIVATE ${COMPONENT_SRCS})

sdk_set_main_file(../main.c)

project(fpga_companion)
#project(fpga_companion CXX)
